gccida/c3/loop_iv_add_mult_emit_before
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iv_add_mult_emit_before/src/loop.c:8165:44: error: use of undeclared identifier 'machine_mode'
v12 = expand_mult_add( x, reg, v10, v11, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iv_add_mult_emit_before/src/obj/loop.o] Error 1
